добавлена кнопка закрытия скилов героя

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<script src="main.js"></script>
 	<body>
 		<div id="conteiner">
-				<h1>STAR WARS CHARACTERS</h1>
-			<div id="foo">
+			<h1>STAR WARS CHARACTERS</h1>
+			<div id="hero">
 				<ul id="heroList"></ul>
 			</div>
 			<div id="navigation">
-				<input type="button" value="&laquo&laquo" id="previous">
-				<input type="button" value="&raquo&raquo" id="next">
+				<input type="button" value="&#8656" id="previous">
+				<input type="button" value="&#8658" id="next">
 			</div>
 			<div id="info">
 				<ul id="infoList">
@@ -26,6 +26,7 @@
 					<li id="species"></li>
 				</ul>
 			</div>
+			<input type="button" value="&times" id="close">
 		</div>
 	</body>
 	</html>	
